# WireframeGame

./: CMakeLists.txt  packages.txt
include/: globals.h  inputs.h  object.h  point.h  sprite.h  window.h
src/: globals.cpp  inputs.cpp  main.cpp  sprite.cpp  window.cpp
